<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sort"
            android:padding="3dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tab_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_margin="6dp"
            android:text="@string/default_tab"
            android:textColor="@color/white"
            android:padding="3dp"
            android:textSize="12sp"
            android:background="@drawable/unselected_tab_bg"/>

        <TextView
            android:id="@+id/tab_atk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_margin="6dp"
            android:text="@string/attack_tab"
            android:textColor="@color/white"
            android:padding="3dp"
            android:textSize="12sp"
            android:background="@drawable/unselected_tab_bg"/>

        <TextView
            android:id="@+id/tab_def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_margin="6dp"
            android:text="@string/defense_tab"
            android:textColor="@color/white"
            android:padding="3dp"
            android:textSize="12sp"
            android:background="@drawable/unselected_tab_bg"/>

        <TextView
            android:id="@+id/tab_spd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_margin="6dp"
            android:text="@string/speed_tab"
            android:textColor="@color/white"
            android:padding="3dp"
            android:textSize="12sp"
            android:background="@drawable/unselected_tab_bg"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_tab">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_main"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/type_row"
                tools:itemCount="1"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>