<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/poke_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/teal_700"
    android:layout_margin="8dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PokemonName"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#Order"
        android:textColor="@color/grey_200"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_name" />

    <TextView
        android:id="@+id/atk_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ATK_num"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_num" />

    <TextView
        android:id="@+id/def_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DEF_num"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atk_num" />

    <TextView
        android:id="@+id/spd_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SPD_num"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/def_num" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        app:tint="@color/grey_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/poke_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>